fix dark mode btn

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-image: linear-gradient(var(--background-color,),var(--background-color2));
+  background: var(--background-color2);
   color: var(--text-color);
   display: flex;
   justify-content: center;
@@ -15,7 +15,6 @@ body {
   max-width: 700px;
   width: 90%;
   padding: 30px;
-  /* background: #fff; */
   background: var(--background-color);
   border-radius: 12px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
